I have finished the columns and rows of the website and created the links to each pages.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@ and open the template in the editor.
         <link type="text/css" rel="stylesheet" href="css/bootstrap.css"> 
         <link type="text/css" rel="stylesheet" href="css/custom-style.css">  
     </head>
-    <body>
+    <body> 
+        <nav> 
+            <a href="index.html">Index</a> 
+            <a href="Projects-v2.html">Projects</a> 
+            <a href="technology page-v2.html">Technologies</a>
+        </nav>
         <div class="container"> 
             <p>container</p> 
             <div class="row">  
@@ -32,7 +37,11 @@ and open the template in the editor.
                     </div> 
                 </div> 
                 <div class="col-xs-2"> 
-                    <p>col-xs-2</p> 
+                    <nav class="list-group"> 
+                     <a class="list-group-item" href="index.html">About Me</a> 
+                     <a class="list-group-item" href="Projects-v2.html">Projects</a> 
+                     <a class="list-group-item" href="technology page-v2">Technologies</a>
+                    </nav> 
                 </div>
             </div>
         </div>
