--- a/Projects-v2.html
+++ b/Projects-v2.html
@@ -6,11 +6,17 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Projects</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
-    <body>
+    <body>          
+        <nav> 
+            <a href="index.html">Index</a> 
+            <a href="Projects-v2.html">Projects</a> 
+            <a href="technology page-v2.html">Technologies</a>
+        </nav>
         <div>TODO write content</div>
-    </body>
+    </body> 
+     
 </html>
