--- a/technology page-v2.html
+++ b/technology page-v2.html
@@ -6,11 +6,16 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Technologies</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
-    <body>
+    <body> 
+        <nav> 
+            <a href="index.html">Index</a> 
+            <a href="Projects-v2.html">Projects</a> 
+            <a href="technology page-v2.html">Technologies</a>
+        </nav>
         <div>TODO write content</div>
     </body>
 </html>
