I sadly deleted my projects page so I had do redo it again.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Index</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <link type="text/css" rel="stylesheet" href="css/boostrap-theme.css"> 
@@ -16,7 +16,7 @@ and open the template in the editor.
     <body> 
         <nav> 
             <a href="index.html">Index</a> 
-            <a href="Projects-v2.html">Projects</a> 
+            <a href="Projects.html">Projects</a> 
             <a href="technology page-v2.html">Technologies</a>
         </nav>
         <div class="container"> 
@@ -28,7 +28,8 @@ and open the template in the editor.
                     <div class="row"> 
                         <p>row</p>
                       <div class="col-xs-3"></div> 
-                      <div class="col-xs-9"></div> 
+                      <div class="col-xs-9"></div>  
+                      <img src="">
                     </div>
                     <div class="row"> 
                       <p>row</p>  
