I still finishing my pages

--- a/technology page-v2.html
+++ b/technology page-v2.html
@@ -20,7 +20,15 @@ and open the template in the editor.
             <a href="Projects.html">Projects</a> 
             <a href="technology page-v2.html">Technologies</a>
         </nav>  
-            
         </header> 
+        <article>  
+            <h1> Technology used for this Web site</h1> 
+                    <h2>HTML</h2> 
+                    <p>HTML or HyperText Markup Language is a standard system for tagging text files to accomplish  web sites on the Internet.</p> 
+                        <h3>CSS</h3>
+                        <p>CSS or Cascading Style Sheets is a style sheet language used for describing the look and formatting of a document written in a markup language. </p> 
+                        <h3>Bootstrap</h3>    
+                        <p>Bootstrap is a technique of loading a program into a computer by means of a few initial instructions that enable the introduction of the rest of the program from an input device. </p>
+        </article>
     </body>
 </html>
