--- a/Projects.html
+++ b/Projects.html
@@ -2,7 +2,8 @@
     <head>
         <title>Projects</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link type="text/css" rel="stylesheet" href="css/boostrap-theme.css"> 
         <link type="text/css" rel="stylesheet" href="css/bootstrap.css"> 
         <link type="text/css" rel="stylesheet" href="css/custom-style.css">  
@@ -18,8 +19,10 @@
         <div class="container">  
         <p>Container</p> 
         <div class="row"></div>  
-            <img scr="images/2014-09-09 23_11_16-Kiera's Portfolio Website.png"> 
-            <img scr="images/Second Portfolio Website.png"> 
+        <article>
+        <img href="images/2014-09-09 23_11_16-Kiera's Portfolio Website.png"> 
+        <img href="images/Second Portfolio Website.png">   
+        </article>   
         </div>
     </body>
 </html>
