I have added my project images to my projects page (finally). I will probably make a carousel using my projects as content.

--- a/Projects.html
+++ b/Projects.html
@@ -3,26 +3,26 @@
         <title>Projects</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link type="text/css" rel="stylesheet" href="css/boostrap-theme.css"> 
         <link type="text/css" rel="stylesheet" href="css/bootstrap.css"> 
         <link type="text/css" rel="stylesheet" href="css/custom-style.css">  
     </head>
-    <body> 
+    <body class="projectsback"> 
         <header>
             <nav> 
-            <a href="index.html">Index</a> 
-            <a href="Projects.html">Projects</a> 
-            <a href="technology page-v2.html">Technologies</a>
-            </nav>
-        </header> 
-        <div class="container">  
-        <p>Container</p> 
-        <div class="row"></div>  
-        <article>
-        <img href="images/2014-09-09 23_11_16-Kiera's Portfolio Website.png"> 
-        <img href="images/Second Portfolio Website.png">   
-        </article>   
-        </div>
+            <a href="index.html" class="btn-defult btn-lg active" role="button">Index</a>
+            <a href="Projects.html" class="btn-defult btn-lg active" role="button">Projects</a> 
+            <a href="technology page-v2.html" class="btn-defult btn-lg active" role="button">Technologies</a> 
+            </nav>  
+            <article>  
+                <h1>Projects I have made so far...</h1> 
+                <img src="images/2014-09-09 23_11_16-Kiera's Portfolio Website.png" alt="Portfolio 1" class="img-rounded"><h2>First Portfolio Web Site</h2> 
+                <p>Fill in later.</p> 
+                <img src="images/Second Portfolio Website.png" alt="Portfolio 2" class="img-rounded"><h3>Second Portfolio Web Site</h3> 
+                <p>Fill in later.</p> 
+            </article>
+        </header>  
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+       <script src="javascripts/bootstrap.min.js"></script>
     </body>
 </html>
