--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
         <title>Index</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link type="text/css" rel="stylesheet" href="css/boostrap-theme.css"> 
         <link type="text/css" rel="stylesheet" href="css/bootstrap.css"> 
         <link type="text/css" rel="stylesheet" href="css/custom-style.css">  
     </head>
     <body> 
         <nav> 
-            <a href="index.html">Index</a> 
-            <a href="Projects.html">Projects</a> 
-            <a href="technology page-v2.html">Technologies</a>
+            <a href="index.html" class="btn-defult btn-lg active" role="button">Index</a> 
+            <a href="Projects.html" class="btn-defult btn-lg active" role="button">Projects</a> 
+            <a href="technology page-v2.html" class="btn-defult btn-lg active" role="button">Technologies</a>
         </nav>
         <div class="container"> 
             <p>container</p> 
