--- a/technology page-v2.html
+++ b/technology page-v2.html
@@ -10,9 +10,9 @@
     <body>  
         <header>
         <nav> 
-            <a href="index.html">Index</a> 
-            <a href="Projects.html">Projects</a> 
-            <a href="technology page-v2.html">Technologies</a>
+            <a href="index.html" class="btn-defult btn-lg active" role="button">Index</a> 
+            <a href="Projects.html" class="btn-defult btn-lg active" role="button">Projects</a> 
+            <a href="technology page-v2.html" class="btn-defult btn-lg active" role="button">Technologies</a>
         </nav>  
         </header> 
         <article>  
