--- a/Projects.html
+++ b/Projects.html
@@ -3,26 +3,60 @@
         <title>Projects</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link type="text/css" rel="stylesheet" href="css/boostrap-theme.css"> 
+        <link type="text/css" rel="stylesheet" href="css/bootstrap-theme.css"> 
         <link type="text/css" rel="stylesheet" href="css/bootstrap.css"> 
         <link type="text/css" rel="stylesheet" href="css/custom-style.css">  
     </head>
-    <body class="projectsback"> 
+    <body class="projectsback">  
+          <!-- SCM Music Player http://scmplayer.net -->
+<script type="text/javascript" src="http://scmplayer.net/script.js" 
+data-config="{'skin':'http://static.tumblr.com/sbxkdxg/yBhmpl793/coffporbau-de-incertezas.css','volume':50,'autoplay':false,'shuffle':false,'repeat':1,'placement':'bottom','showplaylist':false,'playlist':[{'title':'Love Never Felt So Good ','url':'http://www.youtube.com/watch?v=oG08ukJPtR8'},{'title':'Somewhere over the rainbow','url':'http://www.youtube.com/watch?v=3BeKhlUzPUc'},{'title':'Happy','url':'http://www.youtube.com/watch?v=y6Sxv-sUYtM'},{'title':'It%27s Not Unusual','url':'http://www.youtube.com/watch?v=yca2BCwAnBQ'},{'title':'Chocolate High ','url':'http://www.youtube.com/watch?v=MHuzXuRskSE'}]}" ></script>
+<!-- SCM Music Player script end -->
         <header>
             <nav> 
-            <a href="index.html" class="btn-defult btn-lg active" role="button">Index</a>
-            <a href="Projects.html" class="btn-defult btn-lg active" role="button">Projects</a> 
-            <a href="technology page-v2.html" class="btn-defult btn-lg active" role="button">Technologies</a> 
-            </nav>  
-            <article>  
-                <h1>Projects I have made so far...</h1> 
-                <img src="images/2014-09-09 23_11_16-Kiera's Portfolio Website.png" alt="Portfolio 1" class="img-rounded"><h2>First Portfolio Web Site</h2> 
-                <p>Fill in later.</p> 
-                <img src="images/Second Portfolio Website.png" alt="Portfolio 2" class="img-rounded"><h3>Second Portfolio Web Site</h3> 
-                <p>Fill in later.</p> 
-            </article>
-        </header>  
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-       <script src="javascripts/bootstrap.min.js"></script>
+                <a href="index.html" class="btn-defult btn-lg active" role="button">Index</a>
+                <a href="Projects.html" class="btn-defult btn-lg active" role="button">Projects</a>  
+                <a id="Techno" href="technology page-v2.html" data-toggle="dropdown" class="btn-defult btn-lg active" role="button" data-target=""> 
+                    Technologies<span class="caret"></span> 
+                </a> 
+                <ul class="dropdown-menu" role="menu" aria-labelledby="Techno"> 
+                    <li><a href="http://www.w3schools.com">HTML Info</a></li>
+                    <li><a href="http://www.htmldog.com">CSS Info</a></li>
+                    <li><a href="http://getbootstrap.com">Bootstrap Info</a></li>
+                    <li class="divider"></li>
+                    <li><a href="http://www.codecademy.com">Learn to Code</a></li> 
+                    <li><a href="http://www.theappacademy.us">APP Academy</a></li>
+                </ul>   
+            </nav>
+        </header>
+        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="item active">
+                    <img src="images/2014-09-09 23_11_16-Kiera's Portfolio Website.png" alt="1stWeb">
+                    <div class="carousel-caption">
+                        <h3>My First Portfolio Web Site </h3>    
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="images/Second Portfolio Website.png" alt="2ndWeb">
+                    <div class="carousel-caption">
+                       <h3>My Second Portfolio Web Site</h3>   
+                    </div>
+                </div>
+            </div>
+            <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+            </a>
+            <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+            </a>
+        </div>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
     </body>
 </html>
