--- a/index.html
+++ b/index.html
@@ -3,41 +3,31 @@
         <title>Index</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-        <link type="text/css" rel="stylesheet" href="css/boostrap-theme.css"> 
+        <link type="text/css" rel="stylesheet" href="css/bootstrap-theme.css"> 
         <link type="text/css" rel="stylesheet" href="css/bootstrap.css"> 
         <link type="text/css" rel="stylesheet" href="css/custom-style.css">  
     </head>
-    <body> 
+    <body class="indexpage">  
+        <!-- SCM Music Player http://scmplayer.net -->
+<script type="text/javascript" src="http://scmplayer.net/script.js" 
+data-config="{'skin':'http://static.tumblr.com/sbxkdxg/yBhmpl793/coffporbau-de-incertezas.css','volume':50,'autoplay':false,'shuffle':false,'repeat':1,'placement':'bottom','showplaylist':false,'playlist':[{'title':'Love Never Felt So Good ','url':'http://www.youtube.com/watch?v=oG08ukJPtR8'},{'title':'Somewhere over the rainbow','url':'http://www.youtube.com/watch?v=3BeKhlUzPUc'},{'title':'Happy','url':'http://www.youtube.com/watch?v=y6Sxv-sUYtM'},{'title':'It%27s Not Unusual','url':'http://www.youtube.com/watch?v=yca2BCwAnBQ'},{'title':'Chocolate High ','url':'http://www.youtube.com/watch?v=MHuzXuRskSE'}]}" ></script>
+<!-- SCM Music Player script end -->
         <nav> 
             <a href="index.html" class="btn-defult btn-lg active" role="button">Index</a> 
             <a href="Projects.html" class="btn-defult btn-lg active" role="button">Projects</a> 
-            <a href="technology page-v2.html" class="btn-defult btn-lg active" role="button">Technologies</a>
-        </nav>
-        <div class="container"> 
-            <p>container</p> 
-            <div class="row">  
-                <p>row</p> 
-                <div class="col-xs-10"> 
-                    <p>col-xs-10</p>
-                    <div class="row"> 
-                        <p>row</p>
-                      <div class="col-xs-3"></div> 
-                      <div class="col-xs-9"></div>  
-                    </div>
-                    <div class="row"> 
-                      <p>row</p>  
-                      <div class="col-xs-3"></div> 
-                      <div class="col-xs-9"></div>
-                    </div> 
-                </div> 
-                <div class="col-xs-2"> 
-                    <nav class="list-group"> 
-                     <a class="list-group-item" href="index.html">About Me</a> 
-                     <a class="list-group-item" href="Projects-v2.html">Projects</a> 
-                     <a class="list-group-item" href="technology page-v2">Technologies</a>
-                    </nav> 
-                </div>
-            </div>
-        </div>
+            <a id="Techno" href="technology page-v2.html" data-toggle="dropdown" class="btn-defult btn-lg active" role="button"> 
+                Technologies<span class="caret"></span> 
+            </a> 
+            <ul class="dropdown-menu" role="menu" aria-labelledby="Techno"> 
+               <li><a href="http://www.w3schools.com">HTML Info</a></li>
+               <li><a href="http://www.htmldog.com">CSS Info</a></li>
+               <li><a href="http://getbootstrap.com">Bootstrap Info</a></li>
+               <li class="divider"></li>
+               <li><a href="http://www.codecademy.com">Learn to Code</a></li> 
+               <li><a href="http://www.theappacademy.us">APP Academy</a></li>
+            </ul>   
+        </nav> 
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+       <script src="js/bootstrap.min.js"></script>
     </body>
 </html>
