--- a/Projects.html
+++ b/Projects.html
@@ -8,54 +8,89 @@
         <link type="text/css" rel="stylesheet" href="css/custom-style.css">  
     </head>
     <body class="projectsback">  
-          <!-- SCM Music Player http://scmplayer.net -->
-<script type="text/javascript" src="http://scmplayer.net/script.js" 
-data-config="{'skin':'http://static.tumblr.com/sbxkdxg/yBhmpl793/coffporbau-de-incertezas.css','volume':50,'autoplay':false,'shuffle':false,'repeat':1,'placement':'bottom','showplaylist':false,'playlist':[{'title':'Love Never Felt So Good ','url':'http://www.youtube.com/watch?v=oG08ukJPtR8'},{'title':'Somewhere over the rainbow','url':'http://www.youtube.com/watch?v=3BeKhlUzPUc'},{'title':'Happy','url':'http://www.youtube.com/watch?v=y6Sxv-sUYtM'},{'title':'It%27s Not Unusual','url':'http://www.youtube.com/watch?v=yca2BCwAnBQ'},{'title':'Chocolate High ','url':'http://www.youtube.com/watch?v=MHuzXuRskSE'}]}" ></script>
-<!-- SCM Music Player script end -->
-        <header>
-            <nav> 
-                <a href="index.html" class="btn-defult btn-lg active" role="button">Index</a>
-                <a href="Projects.html" class="btn-defult btn-lg active" role="button">Projects</a>  
-                <a id="Techno" href="technology page-v2.html" data-toggle="dropdown" class="btn-defult btn-lg active" role="button" data-target=""> 
-                    Technologies<span class="caret"></span> 
-                </a> 
-                <ul class="dropdown-menu" role="menu" aria-labelledby="Techno"> 
-                    <li><a href="http://www.w3schools.com">HTML Info</a></li>
-                    <li><a href="http://www.htmldog.com">CSS Info</a></li>
-                    <li><a href="http://getbootstrap.com">Bootstrap Info</a></li>
-                    <li class="divider"></li>
-                    <li><a href="http://www.codecademy.com">Learn to Code</a></li> 
-                    <li><a href="http://www.theappacademy.us">APP Academy</a></li>
-                </ul>   
-            </nav>
-        </header>
+                            <!-- SCM Music Player http://scmplayer.net -->
+                                <script type="text/javascript" src="http://scmplayer.net/script.js" 
+                                data-config="{'skin':'http://static.tumblr.com/sbxkdxg/yBhmpl793/coffporbau-de-incertezas.css','volume':50,'autoplay':false,'shuffle':false,'repeat':1,'placement':'bottom','showplaylist':false,'playlist':[{'title':'Love Never Felt So Good ','url':'http://www.youtube.com/watch?v=oG08ukJPtR8'},{'title':'Somewhere over the rainbow','url':'http://www.youtube.com/watch?v=3BeKhlUzPUc'},{'title':'Happy','url':'http://www.youtube.com/watch?v=y6Sxv-sUYtM'},{'title':'It%27s Not Unusual','url':'http://www.youtube.com/watch?v=yca2BCwAnBQ'},{'title':'Chocolate High ','url':'http://www.youtube.com/watch?v=MHuzXuRskSE'}]}" ></script>
+                            <!-- SCM Music Player script end -->
+    <header>
+                          <!--Navigational Bar-->       
+                        <nav class="navbar navbar-default" role="navigation">
+                      <div class="container-fluid">
+                        <!-- Brand and toggle get grouped for better mobile display -->
+                        <div class="navbar-header">
+                          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                          </button>
+                        </div>
+                        <!-- Collect the nav links, forms, and other content for toggling -->
+                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                          <ul class="nav navbar-nav">
+                            <li class="active"><a href="index.html">Index</a></li>
+                            <li><a href="Projects.html">Projects</a></li>
+                            <li class="dropdown">
+                              <a href="technology page-v2.html" class="dropdown-toggle" data-toggle="dropdown">Technologies<span class="caret"></span></a>
+                              <ul class="dropdown-menu" role="menu">
+                                <li><a href="http://www.w3schools.com">HTML Info</a></li>
+                                <li><a href="http://www.htmldog.com">CSS Info</a></li>
+                                <li><a href="http://getbootstrap.com">Bootstrap Info</a></li>
+                                <li class="divider"></li>
+                                <li><a href="http://www.codecademy.com">Learn to Code</a></li>
+                                <li class="divider"></li>
+                                <li><a href="http://www.theappacademy.us">APP Academy</a></li>
+                              </ul>
+                            </li>
+                          </ul>
+                        </div><!-- /.navbar-collapse -->
+                      </div><!-- /.container-fluid -->
+                    </nav>
+        </header> 
+             <!--End Navigational Bar--> 
+             <!--Beginning of my Carousel-->
         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                 <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                 <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-            </ol>
+            </ol> 
+            <!--Carousel-inner is what goes within the carousel-->
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="images/2014-09-09 23_11_16-Kiera's Portfolio Website.png" alt="1stWeb">
+                    <img src="images/2014-09-09 23_11_16-Kiera's Portfolio Website.png" alt="1stWeb" class="img-rounded">
                     <div class="carousel-caption">
-                        <h3>My First Portfolio Web Site </h3>    
+                       <h3>My First Portfolio Web Site</h3>   
                     </div>
                 </div>
                 <div class="item">
-                    <img src="images/Second Portfolio Website.png" alt="2ndWeb">
+                    <img src="images/Second Portfolio Website.png" alt="2ndWeb" class="img-rounded">
                     <div class="carousel-caption">
                        <h3>My Second Portfolio Web Site</h3>   
                     </div>
-                </div>
-            </div>
+                </div> 
+            </div>  
+            <!--These are the controls for the slides. It makes the carousel move slides.-->
             <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
                 <span class="glyphicon glyphicon-chevron-left"></span>
             </a>
             <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
                 <span class="glyphicon glyphicon-chevron-right"></span>
-            </a>
-        </div>
+            </a>    
+           </div>  
+        <!--End of Carousel-->  
+         <div class="jumbotron">
+         <div class="container">  
+             <!--I wanted the container to apply to the jumbotron as well.-->
+            <center>    
+            <h3>My First Portfolio Web Site</h3> 
+            <p>My first project was a web site that used only HTML and CSS. We did not have all the tools we do with Bootstrap. The main ways I could only add cool functions were by GIFS, Videos, and Music Player. It was very simple and plan like this one in a way. Except I have a little more color to this web site.</p>
+            <h3>My Second Portfolio Web Site</h3> 
+            <p>My second project is this web site that uses Bootstrap, HTML, and CSS. I was able to use features such as buttons, drop downs, and jumbotrons. I was still able to use videos, music, and GIFS on top of that. </p> 
+            <h3>Activities to Come</h3> 
+            <p>In our class we will be making simple games like snake and move forward onto games like Mario (the older version). It will involve design as well making the task a bit more difficult. If you click on the snake game image below, you will be able to go directly to the actual game itself.</p> 
+            <a href="http://patorjk.com/games/snake"><img src="images/play-snake-online.jpg"></a> 
+             </center>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
     </body>
