Added an alert button to warn people image is a link.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         <link type="text/css" rel="stylesheet" href="css/custom-style.css">  
     </head>
     <body class="indexpage">  
-                                    <!-- SCM Music Player http://scmplayer.net -->
-                            <script type="text/javascript" src="http://scmplayer.net/script.js" 
-                            data-config="{'skin':'http://static.tumblr.com/sbxkdxg/yBhmpl793/coffporbau-de-incertezas.css','volume':50,'autoplay':false,'shuffle':false,'repeat':1,'placement':'bottom','showplaylist':false,'playlist':[{'title':'Love Never Felt So Good ','url':'http://www.youtube.com/watch?v=oG08ukJPtR8'},{'title':'Somewhere over the rainbow','url':'http://www.youtube.com/watch?v=3BeKhlUzPUc'},{'title':'Happy','url':'http://www.youtube.com/watch?v=y6Sxv-sUYtM'},{'title':'It%27s Not Unusual','url':'http://www.youtube.com/watch?v=yca2BCwAnBQ'},{'title':'Chocolate High ','url':'http://www.youtube.com/watch?v=MHuzXuRskSE'}]}" ></script>
-                            <!-- SCM Music Player script end -->
+                                   <!-- SCM Music Player http://scmplayer.net -->
+                                    <script type="text/javascript" src="http://scmplayer.net/script.js" 
+                                    data-config="{'skin':'http://static.tumblr.com/sbxkdxg/yBhmpl793/coffporbau-de-incertezas.css','volume':50,'autoplay':false,'shuffle':false,'repeat':0,'placement':'bottom','showplaylist':false,'playlist':[{'title':'Love Never Felt So Good ','url':'http://www.youtube.com/watch?v=oG08ukJPtR8'},{'title':'Somewhere over the rainbow','url':'http://www.youtube.com/watch?v=3BeKhlUzPUc'},{'title':'Happy','url':'http://www.youtube.com/watch?v=y6Sxv-sUYtM'},{'title':'It%27s Not Unusual','url':'http://www.youtube.com/watch?v=yca2BCwAnBQ'},{'title':'Chocolate High ','url':'http://www.youtube.com/watch?v=MHuzXuRskSE'},{'title':'Chasing Pavements','url':'http://www.youtube.com/watch?v=08DjMT-qR9g'},{'title':'Hot Coffee','url':'http://www.youtube.com/watch?v=T236X4qTZ3E'}]}" ></script>
+                                    <!-- SCM Music Player script end -->
                             <!--Beginning of Navigational Bar-->    
                             <nav class="navbar navbar-default" role="navigation">
                           <div class="container-fluid">
@@ -66,7 +66,7 @@
               <div class="modal-body">
                   <h2 class="text-danger">Who am I anyways?</h2>  
                   <!--Text-danger is just a class function I used to make my subheading pop out.-->
-                  <p>My name is Kiera Smith and I was born and raised in California. I'm currently attending Pasadena High School as a freshman and once I graduate I want to be a programmer. I'm in one of the career pathways in PUSD called the APP Academy. It's a programming class that teaches you how to create games, apps, and web sites using code.  I joined last minute not really interested in programming but now I ADORE IT. It's fun and the results are incredible. I dream of traveling the world and expanding my knowledge of other cultures. Family and friends are very precise to me and taking my mother with me to Italy since she always wanted to go. I enjoy learning (most of the time). I like television, reading intriguing books, drawing (even though I'm not so good). I'm a decent writer. Listening and dancing along to music is one of my past times. There are so many activities I like but I can't name them all right away.</p> 
+                  <p>My name is Kiera Smith and I was born and raised in California. I'm currently attending Pasadena High School as a freshman and once I graduate I want to be a programmer. I'm in one of the career pathways in PUSD called the APP Academy. It's a programming class that teaches you how to create games, apps, and web sites using code. I joined last minute not really interested in programming but now I ADORE IT. It's fun and the results are incredible. I dream of traveling the world and expanding my knowledge of other cultures. Family and friends are very important to me and taking my mother with me to Italy is one of my goals since she always wanted to go. I enjoy learning (most of the time). I like television, reading intriguing books, drawing (even though I'm not so good). I'm a decent writer. Listening and dancing along to music is one of my past times. There are so many activities I like but I can't name them all right away.</p> 
                   <p>"I'm really good at talking to people when they're my people." -Kiera Smith</p>
               </div>
               <div class="modal-footer">
