--- a/technology page-v2.html
+++ b/technology page-v2.html
@@ -8,10 +8,10 @@
         <link type="text/css" rel="stylesheet" href="css/custom-style.css">  
     </head>
     <body class="technopage"> 
-          <!-- SCM Music Player http://scmplayer.net This id my music player shown at the bottom of each page of my web site. -->
-            <script type="text/javascript" src="http://scmplayer.net/script.js" 
-            data-config="{'skin':'http://static.tumblr.com/sbxkdxg/yBhmpl793/coffporbau-de-incertezas.css','volume':50,'autoplay':false,'shuffle':false,'repeat':1,'placement':'bottom','showplaylist':false,'playlist':[{'title':'Love Never Felt So Good ','url':'http://www.youtube.com/watch?v=oG08ukJPtR8'},{'title':'Somewhere over the rainbow','url':'http://www.youtube.com/watch?v=3BeKhlUzPUc'},{'title':'Happy','url':'http://www.youtube.com/watch?v=y6Sxv-sUYtM'},{'title':'It%27s Not Unusual','url':'http://www.youtube.com/watch?v=yca2BCwAnBQ'},{'title':'Chocolate High ','url':'http://www.youtube.com/watch?v=MHuzXuRskSE'}]}" ></script>
-          <!-- SCM Music Player script end -->
+                   <!-- SCM Music Player http://scmplayer.net -->
+                    <script type="text/javascript" src="http://scmplayer.net/script.js" 
+                    data-config="{'skin':'http://static.tumblr.com/sbxkdxg/yBhmpl793/coffporbau-de-incertezas.css','volume':50,'autoplay':false,'shuffle':false,'repeat':0,'placement':'bottom','showplaylist':false,'playlist':[{'title':'Love Never Felt So Good ','url':'http://www.youtube.com/watch?v=oG08ukJPtR8'},{'title':'Somewhere over the rainbow','url':'http://www.youtube.com/watch?v=3BeKhlUzPUc'},{'title':'Happy','url':'http://www.youtube.com/watch?v=y6Sxv-sUYtM'},{'title':'It%27s Not Unusual','url':'http://www.youtube.com/watch?v=yca2BCwAnBQ'},{'title':'Chocolate High ','url':'http://www.youtube.com/watch?v=MHuzXuRskSE'},{'title':'Chasing Pavements','url':'http://www.youtube.com/watch?v=08DjMT-qR9g'},{'title':'Hot Coffee','url':'http://www.youtube.com/watch?v=T236X4qTZ3E'}]}" ></script>
+                    <!-- SCM Music Player script end -->
         <header>
             <nav> 
                 <!--This is the code for the navigation bar-->
@@ -102,6 +102,36 @@
                       <img src="images/bootstrap.png" alt="boot" class="img-rounded">
                   </div>
                 </div>
+                </div> 
+                 <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
+                             Description of JavaScript
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapseFour" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            JavaScript is an object-oriented computer programming language commonly used to create interactive effects within web browsers. We are using JavaScript to make the game snake in this case. It does not interact with web servers what so ever but instead with web browsers as stated previously. 
+                             <img src="images/JavaScript logo.png" alt="java" class="img-rounded">
+                        </div>
+                    </div>
+                </div>   
+                    <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive">
+                             Description of MelonJS
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapseFive" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            MelonJS is a computer game program that adapts familiar aspects of Javascript. MelonJS integrates Tiled map allowing the user to design levels of their game easily. MelonJS is compatible with most browsers. MelonJS is still being altered and fix since it is still a project in working progress. 
+                             <img src="images/melonjs.png" alt="css" class="img-rounded">
+                        </div>
+                    </div>
                 </div>
             </div>  
         </article> 
