--- a/Projects.html
+++ b/Projects.html
@@ -7,10 +7,10 @@
         <link type="text/css" rel="stylesheet" href="css/bootstrap.css"> 
         <link type="text/css" rel="stylesheet" href="css/custom-style.css">  
     </head>
-    <body class="projectsback">  
+    <body class="projectsback">                        
                             <!-- SCM Music Player http://scmplayer.net -->
-                                <script type="text/javascript" src="http://scmplayer.net/script.js" 
-                                data-config="{'skin':'http://static.tumblr.com/sbxkdxg/yBhmpl793/coffporbau-de-incertezas.css','volume':50,'autoplay':false,'shuffle':false,'repeat':1,'placement':'bottom','showplaylist':false,'playlist':[{'title':'Love Never Felt So Good ','url':'http://www.youtube.com/watch?v=oG08ukJPtR8'},{'title':'Somewhere over the rainbow','url':'http://www.youtube.com/watch?v=3BeKhlUzPUc'},{'title':'Happy','url':'http://www.youtube.com/watch?v=y6Sxv-sUYtM'},{'title':'It%27s Not Unusual','url':'http://www.youtube.com/watch?v=yca2BCwAnBQ'},{'title':'Chocolate High ','url':'http://www.youtube.com/watch?v=MHuzXuRskSE'}]}" ></script>
+                            <script type="text/javascript" src="http://scmplayer.net/script.js" 
+                            data-config="{'skin':'http://static.tumblr.com/sbxkdxg/yBhmpl793/coffporbau-de-incertezas.css','volume':50,'autoplay':false,'shuffle':false,'repeat':0,'placement':'bottom','showplaylist':false,'playlist':[{'title':'Love Never Felt So Good ','url':'http://www.youtube.com/watch?v=oG08ukJPtR8'},{'title':'Somewhere over the rainbow','url':'http://www.youtube.com/watch?v=3BeKhlUzPUc'},{'title':'Happy','url':'http://www.youtube.com/watch?v=y6Sxv-sUYtM'},{'title':'It%27s Not Unusual','url':'http://www.youtube.com/watch?v=yca2BCwAnBQ'},{'title':'Chocolate High ','url':'http://www.youtube.com/watch?v=MHuzXuRskSE'},{'title':'Chasing Pavements','url':'http://www.youtube.com/watch?v=08DjMT-qR9g'},{'title':'Hot Coffee','url':'http://www.youtube.com/watch?v=T236X4qTZ3E'}]}" ></script>
                             <!-- SCM Music Player script end -->
     <header>
                           <!--Navigational Bar-->       
@@ -68,6 +68,18 @@
                     <div class="carousel-caption">
                        <h3>My Second Portfolio Web Site</h3>   
                     </div>
+                </div>  
+                <div class="item">
+                    <img src="images/Snake Pic.png" alt="3rdWeb" class="img-rounded">
+                    <div class="carousel-caption">
+                       <h3>Video Game Snake</h3>   
+                    </div>
+                </div>  
+                <div class="item">
+                    <img src="images/Screen Shot Mario.png" alt="4thWeb" class="img-rounded">
+                    <div class="carousel-caption">
+                       <h3>Mario Knock Off</h3>   
+                    </div>
                 </div> 
             </div>  
             <!--These are the controls for the slides. It makes the carousel move slides.-->
@@ -86,11 +98,16 @@
             <h3>My First Portfolio Web Site</h3> 
             <p>My first project was a web site that used only HTML and CSS. We did not have all the tools we do with Bootstrap. The main ways I could only add cool functions were by GIFS, Videos, and Music Player. It was very simple and plan like this one in a way. Except I have a little more color to this web site.</p>
             <h3>My Second Portfolio Web Site</h3> 
-            <p>My second project is this web site that uses Bootstrap, HTML, and CSS. I was able to use features such as buttons, drop downs, and jumbotrons. I was still able to use videos, music, and GIFS on top of that. </p> 
-            <h3>Activities to Come</h3> 
-            <p>In our class we will be making simple games like snake and move forward onto games like Mario (the older version). It will involve design as well making the task a bit more difficult. If you click on the snake game image below, you will be able to go directly to the actual game itself.</p> 
+            <p>My second project is this web site that uses Bootstrap, HTML, and CSS. I was able to use features such as buttons, drop downs, and jumbotrons. I was still able to use videos, music, and GIFS on top of that. </p>
+            <h3>Video Game Snake</h3> 
+            <p>Our class created our first video game using CSS, HTML, and JavaScript. It's called snake and the point of the game is to eat as much food without dying. I learned about for loops, varibles, and if statements. Hard as it was (sort of), I made it somehow.</p> 
+            <h3>Mario Knock Off</h3> 
+            <p>Our class once again made another game but using a programming language called melonJS. It's similar to the Snake game so the coding is somewhat familiar to me. The game be called a Platform game which uses tile sets and involves interactive characters. </p>
             <a href="http://patorjk.com/games/snake"><img src="images/play-snake-online.jpg"></a> 
-             </center>
+             </center> 
+             <div class="alert alert-info alert-dismissible" role="alert">
+                 <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                 <strong>Click on the  Snake Image</strong> It might not look like it but it's a link.</div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
     </body>
