--- a/Projects.html
+++ b/Projects.html
@@ -68,7 +68,7 @@
                     <div class="carousel-caption">
                        <h3>My Second Portfolio Web Site</h3>   
                     </div>
-                </div>  
+                </div>   
                 <div class="item">
                     <img src="images/Snake Pic.png" alt="3rdWeb" class="img-rounded">
                     <div class="carousel-caption">
@@ -79,9 +79,16 @@
                     <img src="images/Screen Shot Mario.png" alt="4thWeb" class="img-rounded">
                     <div class="carousel-caption">
                        <h3>Mario Knock Off</h3>   
+                    </div>  
+                    </div>  
+                <div class="item">
+                 <img src="Images/jQuery.png" alt="1stWeb" class="img-rounded">
+                    <div class="carousel-caption">
+                       <h3>Portfolio 3 (Jquery Page)</h3>   
                     </div>
-                </div> 
-            </div>  
+                </div>
+                </div>
+            
             <!--These are the controls for the slides. It makes the carousel move slides.-->
             <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
                 <span class="glyphicon glyphicon-chevron-left"></span>
@@ -102,7 +109,9 @@
             <h3>Video Game Snake</h3> 
             <p>Our class created our first video game using CSS, HTML, and JavaScript. It's called snake and the point of the game is to eat as much food without dying. I learned about for loops, varibles, and if statements. Hard as it was (sort of), I made it somehow.</p> 
             <h3>Mario Knock Off</h3> 
-            <p>Our class once again made another game but using a programming language called melonJS. It's similar to the Snake game so the coding is somewhat familiar to me. The game be called a Platform game which uses tile sets and involves interactive characters. </p>
+            <p>Our class once again made another game but using a programming language called melonJS. It's similar to the Snake game so the coding is somewhat familiar to me. The game be called a Platform game which uses tile sets and involves interactive characters. </p> 
+            <h3>jQuery</h3> 
+            <p>Our class started out with learning jQuery for the beginning of the new semester. I decided that I would use a another page to present the <a href="jquery.html">jQuery project</a>.</p>
             <a href="http://patorjk.com/games/snake"><img src="images/play-snake-online.jpg"></a> 
              </center> 
              <div class="alert alert-info alert-dismissible" role="alert">
