--- a/technology page-v2.html
+++ b/technology page-v2.html
@@ -132,6 +132,21 @@
                              <img src="images/melonjs.png" alt="css" class="img-rounded">
                         </div>
                     </div>
+                </div> 
+                    <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#collapseSix">
+                             Description of jQuery
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapseSix" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            jQuery is a fast, small, and feature-rich JavaScript library. It makes things like HTML document traversal and manipulation, event handling, animation, and Ajax much simpler with an easy-to-use API that works across a multitude of browsers. With a combination of versatility and extensibility, jQuery has changed the way that millions of people write JavaScript. This description is from the jquery.com.
+                             <img src="images/jquery_1.png" alt="css" class="img-rounded">
+                        </div>
+                    </div>
                 </div>
             </div>  
         </article> 
